fixed api-wiser-http-client-templates code generation with RuntimeException replacing.